@@ -19,6 +19,7 @@
 /* ESAME linkage stack operations                 v208e Roger Bowler */
 /* TRAP support added                                     Jan Jaeger */
 /* Correction to stack types in ESAME mode                Jan Jaeger */
+/* ASN-and-LX-reuse facility                  June 2004 Roger Bowler */
 /*-------------------------------------------------------------------*/
 
 // #define  STACK_DEBUG
@@ -1098,6 +1099,7 @@ RADR    abs;                            /* Absolute address          */
 /*              2 = Bytes 144-151 (Branch address or PC number)      */
 /*              3 = Bytes 152-159 (Modifiable area)                  */
 /*              4 = Bytes 136-143 and 168-175 (ESAME-format PSW)     */
+/*              5 = Bytes 176-183 (SASTEIN,PASTEIN)                  */
 /*      regs    Pointer to the CPU register context                  */
 /*                                                                   */
 /*      This function extracts 64 or 128 bits of information from    */
@@ -1109,6 +1111,9 @@ RADR    abs;                            /* Absolute address          */
 /*      R1+1 registers are updated (the leftmost 32 bits remain      */
 /*      unchanged for ESAME).  For code 4, which is valid only for   */
 /*      ESAME, all 64 bits of the R1 and R1+1 registers are loaded.  */
+/*      For code 5 (valid only if the ASN-and-LX-reuse facility is   */
+/*      installed), the leftmost 32 bits of the R1 and R1+1 regs     */
+/*      are updated, and the rightmost 32 bits remain unchanged.     */
 /*                                                                   */
 /*      If a translation exception occurs when accessing the stack   */
 /*      entry, then a program check will be generated by the         */
@@ -1169,6 +1174,25 @@ RADR    abs;                            /* Absolute address          */
     } /* if(code==1||code==4) */
   #endif /*defined(FEATURE_ESAME)*/
 
+  #if defined(FEATURE_ASN_AND_LX_REUSE)
+    /* For code 5, extract bytes 176-183 */
+    if (code == 5)
+    {
+        /* Point to byte 176 of the state entry */
+        lsea += 48;
+        LSEA_WRAP(lsea);
+
+        /* Load the SASTEIN, PASTEIN from bytes 176-179, 180-183*/
+        abs = ARCH_DEP(abs_stack_addr) (lsea, regs, ACCTYPE_READ);
+        FETCH_FW(regs->GR_H(r1), regs->mainstor + abs);
+        FETCH_FW(regs->GR_H(r1+1), regs->mainstor + abs + 4);
+
+        return;
+
+    } /* if(code==5) */
+  #endif /*defined(FEATURE_ASN_AND_LX_REUSE)*/
+
+    /* For codes 0,2,3 in ESAME, and codes 0,1,2,3 in ESA/390 */
     /* Point to byte 128, 136, 144, or 152 depending on the code */
     lsea += code * 8;
     LSEA_WRAP(lsea);
